# RL

./: .gitattributes  Dockerfile  README.md  agent.md  agent.py  app.py  cicids17_dqn_model.pth  data_loader.md  data_loader.py  env.md  env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  schemas.py  train.md  train.py  validate.sh
benchmark_results/: comprehensive_evaluation.csv
dataset_sample/: real_sampled_data.csv
server/: app.py
